# SmartMail-BE

./: .env.example  .env_example  .gitignore  Dockerfile  README.md  alembic.ini  auth.py  categorizer.py  crud.py  database.py  db_sync.py  docker-compose.yml  email_service.py  hello.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
alembic/: env.py
app/: __init__.py  authentication.py  email_service.py  models.py  routes.py
migrations/: init.sql
migrations/versions/: 312d501c1605_password_update.py  877c54f6dc3d_initial_migration.py
routers/: ai.py  ai_service.py  analytics.py  auto_reply.py  categories.py  documents.py  emails.py  embedding_service.py  logs.py  mailbox.py  moniter.py  user.py
