[project]
name = "your-fastapi-project"
version = "0.1.0"
description = "FastAPI project with LangChain and PostgreSQL"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==23.2.1",
    "alembic==1.12.1",
    "annotated-types==0.7.0",
    "anyio==3.7.1",
    "bcrypt==4.3.0",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorama==0.4.6",
    "cryptography==45.0.4",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "ecdsa==0.19.1",
    "email-validator==2.2.0",
    "fastapi==0.104.1",
    "greenlet==3.2.3",
    "groq==0.29.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==0.3.26",
    "langchain-core==0.3.66",
    "langchain-groq==0.3.4",
    "langchain-text-splitters==0.3.8",
    "langsmith==0.4.4",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "orjson==3.10.18",
    "packaging==24.2",
    "passlib==1.7.4",
    "psycopg2-binary==2.9.10",
    "pyasn1==0.6.1",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-settings==2.1.0",
    "pydantic-core==2.33.2",
    "python-dateutil==2.8.2",
    "python-dotenv==1.1.1",
    "python-jose==3.3.0",
    "python-multipart==0.0.6",
    "pyyaml==6.0.2",
    "requests==2.32.4",
    "requests-toolbelt==1.0.0",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.23",
    "starlette==0.27.0",
    "tenacity==9.1.2",
    "typing-inspection==0.4.1",
    "typing-extensions==4.14.0",
    "urllib3==2.5.0",
    "uvicorn==0.24.0",
    "watchfiles==1.1.0",
    "websockets==15.0.1",
    "zstandard==0.23.0",
    "qdrant-client>=1.14.3",
    "protobuf>=3.20.0",
    "grpcio>=1.41.0",
    "grpcio-tools>=1.41.0",
    "sentence-transformers>=4.1.0",
    "langgraph>=0.5.0",
    "asyncpg>=0.30.0",
    "numpy>=2.3.1",
    "google>=3.0.0",
    "portalocker>=2.10.1",
    "huggingface-hub>=0.33.1",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.0",
    "regex>=2024.11.6",
    "sentry-sdk[fastapi]>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "flake8",
    "mypy",
]

# Don't try to build this as a package - it's an application
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
